<resources>
    <string name="app_name">1st Application</string>
    <string name="action_settings">Settings</string>

    <string-array name="shift">
        <item>মাঝ রাত</item>
        <item>সকাল</item>
        <item>বিকাল</item>
        <item>সন্ধ্যা</item>
        <item>দুপুর</item>
        <item>রাত</item>
        <item>শেষ রাত</item>
    </string-array>

    <string-array name="state_of_action">
        <item>খোলা</item>
        <item>বন্ধ</item>
        <item>স্থায়ীভাবে বন্ধ</item>
    </string-array>

    <string-array name="close_reason">
        <item>উপস্থিত</item>
        <item>অনুপস্থিত</item>
    </string-array>

    <string-array name="close_reason2">
        <item>উপস্থিত</item>
        <item>অনুপস্থিত</item>
    </string-array>

    <string-array name="organization">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="designation">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="spinnerLCItem7">
        <item>-----</item>
        <item>হ্যাঁ</item>
        <item>না</item>
    </string-array>

    <string-array name="close_reason3">
        <item>-----</item>
        <item>শিক্ষক অনুপস্থিত</item>
        <item>শিক্ষার্থী উপস্থিতি সন্তোষজনক নয়</item>
        <item>স্থায়ীভাবে বন্ধ</item>
        <item>অন্যান্য</item>
    </string-array>


    <string-array name="spinnerLCItem26">
        <item>--------</item>
        <item>খোলা মেঝে</item>
        <item>চটের মাদুর</item>
        <item>প্লাসটিকের মাদুর</item>
        <item>বেঞ্চ</item>
    </string-array>

    <string-array name="spinnerLCItem_qus_36">
        <item>--------</item>
        <item>এসএসসি</item>
        <item>এইচএসসি</item>
        <item>গ্র্যাজুয়েট</item>
        <item>পোস্ট গ্র্যাজুয়েট</item>
    </string-array>

    <string-array name="spinnerLCItem10">

        <item>--------</item>
         <item>সম্পর্ক নাই</item>
        <item>পিতা</item>
        <item>মাতা</item>
        <item>স্বামী/স্ত্রী</item>
        <item>অন্যান্য</item>
    </string-array>

    <string-array name="spinnerLCItem69">
        <item>---------</item>
        <item>প্রতিটি বিষয়ে</item>
        <item>প্রতিদিন</item>
        <item>মাঝে মাঝে</item>
        <item>খুবই কম</item>
    </string-array>

    <string-array name="spinnerLCItem73">
        <item>----------</item>
        <item>স্থানীয় সোনালী ব্যাংক হতে সরাসরি</item>
        <item>বুথ স্থাপনের মাধ্যমে</item>
        <item>অন্যান্য</item>
    </string-array>

    <string-array name="spinnerLCItem75.1">
        <item>-----------</item>
        <item>সিএমসি কর্তিক ইচ্ছাকৃতভাবে দেওয়া হয়নি</item>
        <item>সোনালী ব্যাংক হতে টাকা উত্তোলন করা হয়নি</item>
        <item>অন্যান্য</item>
    </string-array>

    <string-array name="spinnerLCItem8">
        <item>------------</item>
        <item>সব সময়ে করে</item>
        <item>মাঝে মাঝে</item>
        <item>কখনই প্রশ্ন করে না</item>
    </string-array>

    <string-array name="spinnerLCItem9">
        <item>------------</item>
        <item>খুব ভাল</item>
        <item>ভাল</item>
        <item>কোন আন্তঃসম্পর্ক নেই</item>
    </string-array>

    <string-array name="spinnerLCItem11">
        <item>------------</item>
        <item>খুব দক্ষ</item>
        <item>মোটামুটি দক্ষ</item>
        <item>কোন দক্ষতা নেই</item>
    </string-array>

    <string-array name="spinnerLCItem18.1">
        <item>-------------</item>
        <item>শিক্ষকের বাড়ি</item>
        <item>স্থানীয় জনগোষ্ঠীর বাড়ি</item>
        <item>সিএমসি সভাপতি/সদস্যের বাড়ি</item>
        <item>অন্যান্য</item>
    </string-array>

    <string-array name="spinnerLCItem18.2">
        <item>--------------</item>
        <item>আদর্শ শ্রেণীকক্ষ</item>
        <item>বারান্দা</item>
        <item>শোবার ঘর</item>
        <item>গুদাম ঘর</item>
        <item>অন্য কোন স্কুল/ধর্মীয় প্রতিষ্ঠানের ঘর</item>
        <item>খোলা জায়গা</item>
        <item>গোয়াল ঘর</item>
        <item>ঘূর্ণিঝড়/বন্যা আশ্রয় কেন্দ্র</item>
        <item>অন্যান্য</item>
    </string-array>



    <string name="text_registration_user_name">User Name</string>
    <string name="text_registration_first_name">First Name</string>
    <string name="text_registration_last_name">Last Name</string>
    <string name="text_organization">Organization:</string>
    <string name="text_designation">Designation:</string>
    <string name="text_registration_employee_id">Employee ID</string>
    <string name="text_registration_contact_number_personal">Personal Mobile/ User Name</string>
    <string name="text_registration_contact_number_official">Official Mobile</string>
    <string name="text_registration_email">Email Address</string>
    <string name="text_registration_address">Address</string>
    <string name="text_registration_password">Password</string>
    <string name="text_registration_confirm_password">Confirm Password</string>
    <string name="btn_reg_submit">Submit</string>

    <string name="text_registration_form">Registration Form</string>

</resources>
