<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!-- xmlns:tools="http://schemas.android.com/tools"
    tools:context=".registration_form"> -->


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/cardview_dark_background"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>



 <LinearLayout
 android:id="@+id/ll_reg"
 android:layout_height="match_parent"
 android:layout_width="match_parent"
 android:orientation="vertical"
 android:padding="16dp"
 android:visibility="visible">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:text="@string/text_registration_form"
    android:textAppearance="?android:attr/textAppearanceLarge" />

  <!--<EditText
    android:id="@+id/editText_userName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Full Name"
    android:inputType="textNoSuggestions|textCapWords"
    android:maxLength="30"
    android:textSize="15sp" />-->

  <!--<EditText
    android:id="@+id/editText_userMobile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Mobile Number"
    android:inputType="phone"
    android:maxLength="11"
    android:textSize="15sp" />-->

  <!-- <EditText
     android:id="@+id/editText_userDeg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="Designation"
     android:inputType="text"
     android:maxLength="30"
     android:textSize="15sp" />

 <EditText
     android:id="@+id/editText_userOrg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="Organization"
     android:inputType="text"
     android:maxLength="30"
     android:textSize="15sp" />

 <EditText
     android:id="@+id/editText_userEmail"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="Email"
     android:maxLength="40"
     android:inputType="textNoSuggestions|textEmailAddress"
     android:textSize="15sp" />-->

 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textNoSuggestions|textCapWords"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textNoSuggestions|textCapWords"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_organization"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_organization"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinOrganization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:entries="@array/organization"
                android:gravity="center_horizontal"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:spinnerMode="dropdown" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_designation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_designation"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spin_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:entries="@array/designation"
                android:gravity="center_horizontal"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"

                android:spinnerMode="dropdown" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_employee_id"
        app:endIconCheckable="true"
        app:endIconMode="none"
        app:endIconTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_employee_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_contact_number_personal"
        app:endIconCheckable="true"
        app:endIconMode="none"
        app:endIconTint="@color/colorPrimaryDark"
        app:startIconDrawable="@drawable/ic_phone_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_contact_number_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_contact_number_official"
        app:endIconCheckable="true"
        app:endIconMode="none"
        app:endIconTint="@color/colorPrimaryDark"
        app:startIconDrawable="@drawable/ic_phone_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_contact_number_official"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_email"
        app:endIconCheckable="true"
        app:endIconMode="none"
        app:endIconTint="@color/colorPrimaryDark"
        app:startIconDrawable="@drawable/ic_email_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_address"
        app:endIconCheckable="true"
        app:endIconMode="none"
        app:endIconTint="@color/colorPrimaryDark"
        app:startIconDrawable="@drawable/ic_business_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textPostalAddress"
            android:maxLength="100" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/text_registration_confirm_password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:elevation="4dp"
        android:onClick="onClickDeviceRegSubmit"
        android:paddingLeft="30dp"
        android:paddingTop="12dp"
        android:paddingRight="30dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="10sp"
        android:text="@string/btn_reg_submit"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
  </LinearLayout>



  </LinearLayout>





</LinearLayout>

</ScrollView>